Update org page titles and subtitles

--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -1,6 +1,7 @@
 ---
-title: Audit log of material GraphOS events
-description: Download a log of all material events that have occured in your organization
+title: Export and read audit logs
+subtitle: Download a log of all material events that have occurred in your GraphOS organization
+description: GraphOS Enterprise users can export and download an audit log of organizational events. Learn how to export and read audit logs from GraphOS Studio.
 ---
 
 <EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#security" />
