--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -1,7 +1,7 @@
 ---
-title: Managing your Apollo plan
-subtitle: Understand your Apollo plan, features, and billing
-description: Learn about Apollo Serverless (Free), Serverless, Dedicated, and Enterprise plans
+title: Manage your GraphOS plan
+subtitle: Understand your plan, features, and billing
+description: Learn about Apollo GraphOS Serverless (Free), Serverless, Dedicated, and Enterprise plans
 ---
 
 Every Apollo organization has an associated plan that determines which GraphOS features the organization has access to, along with how it's billed.
