--- a/src/content/graphos/org/account.mdx
+++ b/src/content/graphos/org/account.mdx
@@ -1,5 +1,7 @@
 ---
-title: Managing your Apollo user account
+title: Manage your user account
+subtitle: Learn how to create and manage GraphOS user accounts
+description: Learn how to create, view, and delete your Apollo GraphOS organizations.
 ---
 
 ## Creating your account
