--- a/src/content/graphos/org/index.mdx
+++ b/src/content/graphos/org/index.mdx
@@ -1,5 +1,7 @@
 ---
-title: Organizations in GraphOS
+title: GraphOS Organizations
+subtitle: Learn how to create and manage GraphOS organizations
+description: Learn how to create, view, and delete your Apollo GraphOS organizations.
 ---
 
 All data in GraphOS (graphs, schemas, metrics, etc.) is associated with a particular _organization_. Every organization has one or more [members](./members/) who manage it and can access its associated data.
