--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -6,7 +6,7 @@ description: GraphOS Enterprise users can export and download an audit log of or
 
 <EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#security" />
 
-Organizations with a GraphOS [Enterprise plan](http://apollographql.com/pricing) can export and download an audit log of all material events that have occurred in the organization over a given timeframe.
+Organizations with a GraphOS Enterprise plan can export and download an audit log of all material events that have occurred in the organization over a given timeframe.
 
 The interface for requesting an export of auditable events is available under the **Audit** tab of your organization's homepage in GraphOS Studio:
 
