--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -4,7 +4,7 @@ subtitle: Learn which roles have which permissions and how to invite and remove 
 description: Learn about Apollo GraphOS organization roles, access control permissions, member management, and API key roles for efficient collaboration.
 ---
 
-A GraphOS [organization](./) can have any number of members, and each member can be assigned a **role** that defines their capabilities within the organization.
+A GraphOS organization can have any number of members, and each member can be assigned a _role_ that defines their capabilities within the organization.
 
 ## Organization-wide member roles
 
