--- a/src/content/graphos/org/account.mdx
+++ b/src/content/graphos/org/account.mdx
@@ -1,7 +1,7 @@
 ---
 title: Manage your user account
 subtitle: Learn how to create and manage GraphOS user accounts
-description: Learn how to create, view, and delete your Apollo GraphOS organizations.
+description: Learn how to create, manage, and delete your Apollo GraphOS user account.
 ---
 
 ## Creating your account
