--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -1,11 +1,12 @@
 ---
-title: Audit log of material GraphOS events
-description: Download a log of all material events that have occured in your organization
+title: Export and read audit logs
+subtitle: Download a log of all material events that have occurred in your GraphOS organization
+description: GraphOS Enterprise users can export and download an audit log of organizational events. Learn how to export and read audit logs from GraphOS Studio.
 ---
 
 <EnterpriseFeature linkWithAnchor="https://www.apollographql.com/pricing#security" />
 
-Organizations with a GraphOS [Enterprise plan](http://apollographql.com/pricing) can export and download an audit log of all material events that have occurred in the organization over a given timeframe.
+Organizations with a GraphOS Enterprise plan can export and download an audit log of all material events that have occurred in the organization over a given timeframe.
 
 The interface for requesting an export of auditable events is available under the **Audit** tab of your organization's homepage in GraphOS Studio:
 
