--- a/src/content/graphos/org/index.mdx
+++ b/src/content/graphos/org/index.mdx
@@ -1,8 +1,10 @@
 ---
-title: Organizations in GraphOS
+title: GraphOS organizations
+subtitle: Learn how to create and manage GraphOS organizations
+description: Learn how to create, view, and delete your Apollo GraphOS organizations.
 ---
 
-All data in GraphOS (graphs, schemas, metrics, etc.) is associated with a particular _organization_. Every organization has one or more [members](./members/) who manage it and can access its associated data.
+All data in GraphOS (graphs, schemas, metrics, etc.) is associated with a particular _organization_. Every organization has one or more _members_ who manage it and can access its associated data.
 
 <Tip>
 
@@ -23,7 +25,7 @@ You can create additional organizations by clicking **Create a new organization*
   width="300"
 />
 
-A single organization can include any number of [graphs](../graphs/), so a single company rarely needs more than one or two organizations.
+A single organization can include any number of graphs, so a single company rarely needs more than one or two organizations.
 
 ## Viewing your organizations
 
