--- a/src/content/technotes/TN0005-overload-protection.mdx
+++ b/src/content/technotes/TN0005-overload-protection.mdx
@@ -23,7 +23,7 @@ A more graph-based problem is adding an entity relationship in the schema that c
 
 ## Implementing in Express
 
-Overload protection packages are available for the most popular languages and server frameworks. For example, we'll look at using the [overload-protection](https://www.npmjs.com/package/overload-protection) package with the `@apollo/server` package. This drop-in package enables your server to return a 503 based any of the following:
+Overload protection packages are available for most popular languages and server frameworks. For example, we'll look at using the [overload-protection](https://www.npmjs.com/package/overload-protection) package with the `@apollo/server` package. This drop-in package enables your server to return a 503 based any of the following:
 
 - The current event loop delay
 - The amount of bytes used by the heap
