Add subtitles and descriptions

--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-guide.mdx
@@ -1,5 +1,7 @@
 ---
-title: Set up Apollo SSO with Microsoft Entra ID (formerly Azure AD)
+title: Set up SSO with Microsoft Entra ID (formerly Azure AD)
+subtitle: Configure Entra ID as your GraphOS organization's identity provider
+description: Configure Microsoft Entra ID (formerly Azure AD) as your Apollo GraphOS organization's SSO provider with this SAML setup guide.
 ---
 
 <PremiumFeature>
