--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -1,5 +1,7 @@
 ---
 title: Multi-organization SSO
+subtitle: Switch between organizations in GraphOS Studio without needing to reauthenticate
+description: Set up multi-organization SSO to switch between organizations in GraphOS Studio without needing to reauthenticate.
 ---
 
 <PremiumFeature>
