--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -1,5 +1,7 @@
 ---
 title: Set up Apollo SSO with a SAML-based IdP
+subtitle: Configure a SAML-based identity provider
+description: Configure a SAML-based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
 
 <PremiumFeature>
