--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -1,5 +1,7 @@
 ---
 title: Set up Apollo SSO with an OIDC-based IdP
+subtitle: Configure an OIDC-based identity provider
+description: Configure a OpenID Connect (OIDC) based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
 
 <PremiumFeature>
