Update routing.mdx, removed repeat words

--- a/src/content/graphos/basics/routing.mdx
+++ b/src/content/graphos/basics/routing.mdx
@@ -21,7 +21,7 @@ The router intelligently executes each incoming client operation across the appr
 
 ## GraphOS router types
 
-With GraphOS, you can you can choose for Apollo to provision and manage a cloud-hosted router for you:
+With GraphOS, you can choose for Apollo to provision and manage a cloud-hosted router for you:
 
 ```mermaid
 flowchart LR;
