clarifies screenshots needed

--- a/src/content/graphos/cloud-routing/serverless/fly-to-aws.mdx
+++ b/src/content/graphos/cloud-routing/serverless/fly-to-aws.mdx
@@ -19,9 +19,9 @@ Cloud routers running on Fly must be migrated before July 2, 2024.
 
 ### Who needs to migrate?
 
-Only customers using a cloud router that's running on Fly on the GraphOS Serverless plan need to migrate. You need to migrate if your graph variant shows "Fly" in the Cloud Router Details in the variant Overview:
+Only customers using a cloud router that's running on Fly on the GraphOS Serverless plan need to migrate. You need to migrate if your graph variant shows "ord - Chicago" in the Cloud Router Details in the variant Overview:
 
-[todo: add screenshot]
+[todo: add screenshot of migration banner]
 
 ## AWS vs Fly
 Serverless on AWS includes the same features as Serverless on Fly with improvements to reliability and performance. Serverless was previously hosted in Chicago but now runs on AWS in `us-east-1`. This means faster performance for customers running on AWS and especially those running subgraphs near the supported region. If you require a different AWS region, upgrade to Cloud Dedicated.
