clarify only secrets are deleted

--- a/src/content/graphos/cloud-routing/serverless/index.mdx
+++ b/src/content/graphos/cloud-routing/serverless/index.mdx
@@ -18,9 +18,9 @@ Serverless cloud routers that have not received traffic for 7 days will automati
 
 ### Deleting
 
-If a cloud router has been sleeping for 30 days, it will be automatically deleted. This does not delete your variant from GraphOS Studio, but it does spin down the infrastructure powering your cloud router. Deleting resets both your cloud router config and secrets.
+If a cloud router has been sleeping for 30 days, it will be automatically deleted. This does not delete your variant from GraphOS Studio, but it does spin down the infrastructure powering your cloud router. Deleting your cloud router deletes any secrets that were stored: these cannot be recovered.
 
-[todo: screenshot of will deleete soon banner]
+[todo: screenshot of will delete soon banner]
 
 ## Router states
 | Status                  | Description                                                                                                         |
