--- a/src/content/graphos/cloud-routing/serverless/index.mdx
+++ b/src/content/graphos/cloud-routing/serverless/index.mdx
@@ -4,33 +4,53 @@ subtitle: Learn how serverless cloud routing works
 description: Learn how serverless cloud routing works
 ---
 
-Previously, Serverless variants would scale to zero (hibernate) after 2 minutes of inactivity. In Serverless on AWS, this has been replaced with an extended inactivity threshold. Also new in Serverless, variants that have not received traffic for an extended period will automatically be deleted. This process preserves a variant's schema but deletes the underlying cloud router.
-
 <Note>
-This doc does not apply to Dedicated cloud routers.
+
+Serverless is moving to AWS. If you initialized your serverless cloud before May 21, 2024, you may need to take steps to migrate. [Learn more](./aws-migration).
+
 </Note>
+
+Serverless cloud routers run on shared infrastructure that Apollo manages. Serverless is designed for demos, proof-of-concepts, and small scale production apps that don't require more than 10 requests per second.
+
+## Serverless compute limitations
+
+Serverless capacity can be exhausted in the following circumstances:
+
+- **Complex schemas** can exceed available machine memory for Serverless cloud routers. For example, Serverless cloud routers don't support schemas with over 1,000 input types.
+- **Too many simultaneous requests** can cause your Serverless cloud router to return `429` errors to your clients.
+
+Because Serverless has limited underlying compute resources, certain types of workloads might require you to upgrade to Dedicated. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Contact Sales</TrackableLink> for a free trial.
+
+## Automatic deletion of unused cloud routers
+
+Apollo automatically deletes variants of Serverless cloud supergraphs that receive zero operations over 30 consecutive days. This deletes the router, along with all the variant's historical metrics.
+
+- Apollo will notify you via email whenever a Serverless variant is approaching this 30-day limit.
+- To prevent deletion, execute at least one GraphQL operation on the variant's router before the 30-day limit.
+
+Learn more about a Serverless cloud router statuses preceding deletion in the next section.
+
+## Serverless router status
+
+You can see your cloud router's current status in the GraphOS Studio from your Serverless graph's overview page under **Cloud Router Details**.
+
+[to-do: screenshot of status section]
+
+| Status                     | Description                                                                                                                                      |
+| -------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
+| Initializing               | Your cloud router is being created. This process may take up to five minutes.                                                                    |
+| Running                    | Your graph is operating normally.                                                                                                                |
+| Error                      | Your cloud router is running but a deployment recently failed. See the **Launches** page in GraphOS Studio for more information.                 |
+| Running, will sleep soon   | Your cloud router hasn't received traffic for six days and is scheduled to go to sleep soon.                                                     |
+| Sleeping                   | Your cloud router hasn't received traffic for seven days and is now sleeping. [Learn more.](#sleeping)                                           |
+| Waking                     | Your cloud router was asleep and recently received traffic. You may experience API downtime for approximately one minute and up to five minutes. |
+| Sleeping, will delete soon | Your cloud router has been asleep for almost 30 days and will be deleted soon.                                                                   |
+| Deleted                    | Your cloud router has been deleted but your studio graph variant remains. You can recreate a cloud router at anytime. [Learn more.](#deleted)    |
 
 ### Sleeping
 
-Serverless cloud routers that have not received traffic for 7 days will automatically go to sleep. During this time, your cloud router cannot serve traffic. Sleeping cloud routers will wake up automatically once they receive traffic to the apollographos.net endpoint. While waking, your endpoint will be unable to process incoming requests. It typically takes about 1 minute to wake up.
+Serverless cloud routers that haven't received traffic for seven days automatically go to sleep. While sleeping, your cloud router can't serve traffic. Sleeping cloud routers automatically wake up once they receive traffic to the `apollographos.net` endpoint. While waking, your cloud router can't process incoming requests. It typically takes about one minute to wake up.
 
-[todo: screenshot of sleeping soon banner]
+### Deleted
 
-### Deleting
-
-If a cloud router has been sleeping for 30 days, it will be automatically deleted. This does not delete your variant from GraphOS Studio, but it does spin down the infrastructure powering your cloud router. Deleting your cloud router deletes any secrets that were stored: these cannot be recovered.
-
-[todo: screenshot of will delete soon banner]
-
-## Router states
-| Status                  | Description                                                                                                         |
-|-------------------------|---------------------------------------------------------------------------------------------------------------------|
-| Running                 | Your graph is operating normally and will not sleep soon.                                                            |
-| Creating                | Your cloud router is being created. This process may take up to 5 minutes.                                          |
-| Error                   | Your cloud router is running but a deployment recently failed. See Launches for more information.                   |
-| Running, will sleep soon| Your cloud router hasn’t received traffic for 6 days and is scheduled to go to sleep soon.                          |
-| Sleeping                | Your cloud router hasn’t received traffic for 7 days and is now sleeping.                                           |
-| Waking                  | Your cloud router was asleep and recently received traffic. You may experience API downtime for approximately 1 minute (up to 5 minutes). |
-| Sleeping, will delete soon | Your cloud router has been asleep for almost 30 days and will be deleted soon.                                       |
-| Deleted                 | Your cloud router has been deleted but your studio graph variant remains. You can recreate a cloud router at anytime. |
-
+If a cloud router has been sleeping for 30 days, Apollo automatically deletes it. This doesn't delete your variant from GraphOS Studio, but it does spin down the infrastructure powering your cloud router. Deleting your cloud router deletes any secrets that were stored and these can't be recovered.
